--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
           make html
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/version2.0' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
           context: .
           github_token: ${{ secrets.GITHUB_TOKEN }}
