--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "python-codes"]
 	path = python-codes
 	url = git@github.com:mdcourse/python-codes.git
+[submodule "applications"]
+	path = applications
+	url = git@github.com:mdcourse/applications.git
