fixed broken doc

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           pip install sphinx
           pip install furo
+          pip install sphinxcontrib.bibtex
       - name: Build
         run: |
           cd docs/
