--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"] # "pypy3.9", "pypy3.10", "3.9", "3.10", "3.11", 
 
     steps:
       - uses: actions/checkout@v4
@@ -18,4 +18,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       # You can test your matrix by printing the current Python version
       - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
+        run: |
+          python -m pip install --upgrade pip
+          pip install numpy
+          pip install GitPython
+          cd tests/
+          python build-documentation.py
